[package]
name = "pdb-decompiler"
version = "0.1.0"
authors = ["Camden Smallwood <camden.smallwood@gmail.com>"]
edition = "2024"

[profile.release]
lto = true
opt-level = "s"

[dependencies]
pdb2 = { git = "https://github.com/camden-smallwood/pdb.git", rev = "6eb6a30" }
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
